2008-05-10  Wakaba  <wakaba@suika.fam.cx>

	* CacheManifest.pm: Don't replace U+0000 NULL (HTML5 revision
	1553).

2008-05-06  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Noted that those returned in |table| are
	no longer table elements, but table objects returned
	by Whatpm::HTMLTable.

	* HTMLTable.pm (form_table): Return table element node
	as |$table->{element}|.
	(assign_header): Support for the |headers=""| attribute.

2008-05-06  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm (assign_header): New function; first version
	with no support for headers="".
	(form_table): Include table width and height to the returned
	table object for covenience.  Indexing in column assignement was wrong.
	Set whether a data cell is empty or not for convenience.

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: Robuster caption support (HTML5 revision 1393).

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: How table model errors are detected is
	changed (HTML5 revision 1387).

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: The algorithm now moves |tfoot| elements
	to the end of the table (HTML5 revision 1380).

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: The algorithm is now 0-based indexing, instead
	of 1-based (HTML5 revision 1376).

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: "Content-Type: text/plain; charset=UTF-8"
	and "Content-Encoding" no longer prevent sniffing (HTML5
	revision 1288).

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Skip BOMs n feed or HTML algorithm (HTML5 revision
	1282).

2008-05-03  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for global attributes.
	Status of XML specs are added.

2008-05-03  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_element): Support for |template=""|
	and |ref=""| attribute (referent element type checking).

2008-04-29  Wakaba  <wakaba@suika.fam.cx>
