@@ -1,5 +1,9 @@
 2008-05-10  Wakaba  <wakaba@suika.fam.cx>
 
+	* Makefile (Entities.html): URI has changed.
+
+2008-05-10  Wakaba  <wakaba@suika.fam.cx>
+
 	* CacheManifest.pm: Don't replace U+0000 NULL (HTML5 revision
 	1553).
 
